test/sema/declref.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
fn foo() -> void {
}

fn main() -> void {
    let x: i32 = 1;

    foo;

    x;

    // CHECK: [[# @LINE + 1 ]]:5: error: symbol 'y' not found
    y;

    // CHECK: [[# @LINE + 1 ]]:9: error: redeclaration of 'foo'
    let foo: i32 = 2;

    foo();
}

fn bar(x: i32) -> void {
    x;

    // CHECK: [[# @LINE + 1 ]]:6: error: calling non-function symbol
    x();
}

// CHECK-NOT: {{.*}}